--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Connor Moulton</title>
     <meta charset='UTF-8'/>
-    <meta name='description' content='Connor Moulton is located in Los Angeles, CA' />
+    <meta name='description' content='' />
     <link rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css') />
     <link rel='stylesheet', href='./style.css' />
     <meta name='p:domain_verify' content='ec20bfd65b9540638dc2930c0be55fda' />
@@ -14,8 +14,9 @@
     <nav>
 <ul>
   <li>
-    <a>Connor Moulton</a>
+    Connor Moulton
   </li>
+<!--
   <li>
     <a href="https://keybase.io/connormoulton" target="_blank">keybase</a>
   </li>
@@ -25,11 +26,10 @@
   <li>
     <a href="https://www.instagram.com/connormoulton" target="_blank">instagram</a>
   </li>
-	<!--
-	  <li>
-	    <a href="https://twitter.com/connormoulton" target="_blank">twitter</a>
-	  </li> 
-	-->
+  <li>
+    <a href="https://twitter.com/connormoulton" target="_blank">twitter</a>
+  </li>
+-->
 </ul>
 </nav>
 
